docs/api/qiskit/0.19/qiskit.dagcircuit.DAGNode.mdx
---
title: DAGNode (v0.19)
description: API reference for qiskit.dagcircuit.DAGNode in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.dagcircuit.DAGNode
---

# DAGNode

<Class id="qiskit.dagcircuit.DAGNode" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/dagcircuit/dagnode.py" signature="DAGNode(type=None, op=None, name=None, qargs=None, cargs=None, condition=None, wire=None, nid=- 1)" modifiers="class">
  Object to represent the information at a node in the DAGCircuit.

  It is used as the return value from \*\_nodes() functions and can be supplied to functions that take a node.

  Create a node

  ## Attributes

  <span id="dagnode-cargs" />

  ### cargs

  <Attribute id="qiskit.dagcircuit.DAGNode.cargs" />

  <span id="dagnode-condition" />

  ### condition

  <Attribute id="qiskit.dagcircuit.DAGNode.condition" />

  <span id="dagnode-name" />

  ### name

  <Attribute id="qiskit.dagcircuit.DAGNode.name" />

  <span id="dagnode-op" />

  ### op

  <Attribute id="qiskit.dagcircuit.DAGNode.op">
    Returns the Instruction object corresponding to the op for the node, else None
  </Attribute>

  <span id="dagnode-qargs" />

  ### qargs

  <Attribute id="qiskit.dagcircuit.DAGNode.qargs">
    Returns list of Qubit, else an empty list.
  </Attribute>

  <span id="dagnode-sort-key" />

  ### sort\_key

  <Attribute id="qiskit.dagcircuit.DAGNode.sort_key" />

  <span id="dagnode-type" />

  ### type

  <Attribute id="qiskit.dagcircuit.DAGNode.type" />

  <span id="dagnode-wire" />

  ### wire

  <Attribute id="qiskit.dagcircuit.DAGNode.wire">
    Returns the Bit object, else None.
  </Attribute>

  ## Methods

  <span id="dagnode-semantic-eq" />

  ### semantic\_eq

  <Function id="qiskit.dagcircuit.DAGNode.semantic_eq" signature="DAGNode.semantic_eq(node1, node2)" modifiers="static">
    Check if DAG nodes are considered equivalent, e.g., as a node\_match for nx.is\_isomorphic.

    **Parameters**

    *   **node1** ([*DAGNode*](qiskit.dagcircuit.DAGNode "qiskit.dagcircuit.DAGNode")) – A node to compare.
    *   **node2** ([*DAGNode*](qiskit.dagcircuit.DAGNode "qiskit.dagcircuit.DAGNode")) – The other node to compare.

    **Returns**

    If node1 == node2

    **Return type**

    Bool
  </Function>
</Class>

